BackEnd/z-infra/business-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business
  template:
    metadata:
      labels:
        app: business
    spec:
      containers:
        - name: business
          image: usefulmana/business-service
---
apiVersion: v1
kind: Service
metadata:
  name: business-srv
spec:
  selector:
    app: business
  ports:
    - name: business
      protocol: TCP
      port: 8082
      targetPort: 8082
