BackEnd/z-infra/config-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
        - name: config
          image: usefulmana/config-service
---
apiVersion: v1
kind: Service
metadata:
  name: config-srv
spec:
  selector:
    app: config
  ports:
    - name: config
      protocol: TCP
      port: 8888
      targetPort: 8888
