BackEnd/z-infra/service-registry-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: usefulmana/service-registry
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry-srv
spec:
  selector:
    app: service-registry
  ports:
    - name: worker
      protocol: TCP
      port: 8761
      targetPort: 8761
